Apply suggestions from code review
Co-authored-by: Elena Peña Tapia <57907331+ElePT@users.noreply.github.com>

--- a/docs/api/migration-guides/qiskit-runtime-examples.mdx
+++ b/docs/api/migration-guides/qiskit-runtime-examples.mdx
@@ -169,7 +169,8 @@ state.x(0)
 state.x(1)
 
 # Define provider and simulator backend
-from qiskit import IBMQ
+from qiskit_ibm_provider import IBMProvider
+
 
 provider = IBMProvider()
 
