--- a/docs/verify/simulate-with-qiskit-primitives.mdx
+++ b/docs/verify/simulate-with-qiskit-primitives.mdx
@@ -18,11 +18,11 @@ The following sections show how to use the reference primitives to run your work
 ## Use the reference `Estimator`
 
 There are two reference implementations of `Estimator` in `qiskit.primitives` that run on a local statevector
-simulators, the [`StatevectorEstimator`](../api/qiskit/qiskit.primitives.StatevectorEstimator) class and the
+simulators: the [`StatevectorEstimator`](../api/qiskit/qiskit.primitives.StatevectorEstimator) class and the
 [`Estimator`](../api/qiskit/qiskit.primitives.Estimator) class. The [`StatevectorEstimator`](../api/qiskit/qiskit.primitives.StatevectorEstimator)
-implements the new Estimator V2 interface introduced in Qiskit 1.0, and offers additional input vectorization
+implements the new Estimator V2 interface introduced in the Qiskit SDK 1.0, and offers additional input vectorization
 features in comparison with the [`Estimator`](../api/qiskit/qiskit.primitives.Estimator) class, which implements the
-legacy Estimator V1 interface. Both can take circuits, observables and parameters as inputs and return the locally
+legacy Estimator V1 interface. Both can take circuits, observables, and parameters as inputs and return the locally
 computed expectation values.
 
 The following code prepares the inputs that will be used in the examples below. The expected input type for the
