--- a/docs/verify/simulate-with-qiskit-primitives.mdx
+++ b/docs/verify/simulate-with-qiskit-primitives.mdx
@@ -25,7 +25,7 @@ features in comparison with the [`Estimator`](../api/qiskit/qiskit.primitives.Es
 legacy Estimator V1 interface. Both can take circuits, observables, and parameters as inputs and return the locally
 computed expectation values.
 
-The following code prepares the inputs that will be used in the examples below. The expected input type for the
+The following code prepares the inputs that will be used in the examples that follow. The expected input type for the
 observables is [`qiskit.quantum_info.SparsePauliOp`](../api/qiskit/qiskit.quantum_info.SparsePauliOp). Note that
 the circuit in the example is parametrized, but you can also run the Estimator on non-parametrized circuits.
 
