rmv sentence fragment

--- a/docs/verify/simulate-with-qiskit-primitives.mdx
+++ b/docs/verify/simulate-with-qiskit-primitives.mdx
@@ -190,7 +190,7 @@ instead of the number of `shots` used in the V1 interface.
 
   <TabItem value="V1" label="Estimator (V1)">
 
-      The V1 interface allowed to specify shots by:
+      The V1 interface specifies shots in the following ways:
 
         - Setting keyword arguments in the [`qiskit.primitives.Estimator.run`](../api/qiskit/qiskit.primitives.Estimator#run) method.
         - Modifying the [`qiskit.primitives.Estimator`](../api/qiskit/qiskit.primitives.Estimator) options.
