--- a/docs/verify/simulate-with-qiskit-primitives.mdx
+++ b/docs/verify/simulate-with-qiskit-primitives.mdx
@@ -216,7 +216,7 @@ the output probability distributions, but they are expressed in different terms:
 
 - The new StatevectorSampler (V2) output can be expressed as an array of sampled values (bitstring) or "counts"
   for each bitstring present in the output distribution.
-- The Sampler (V1) output is always expressed as a "quasi-probability" distribution of output states
+- The Sampler (V1) output is always expressed as a quasi-probability distribution of output states.
 
 The following code prepares the inputs that will be used in the examples below. Note that
 these examples run a single circuit, and the circuit is parametrized, but you can also run the Sampler
