--- a/docs/verify/simulate-with-qiskit-primitives.mdx
+++ b/docs/verify/simulate-with-qiskit-primitives.mdx
@@ -392,7 +392,7 @@ By default, the reference Sampler performs an exact statevector calculation base
 However, this can be modified to introduce the effect of the sampling overhead (also known as "shot noise").
 
 With the introduction of the new V2 interface, the sampling overhead in the Sampler is now more precisely defined.
-The new interface accepts a `shots` argument that can be defined at the "pub level"
+The new interface accepts a `shots` argument that can be defined at the "pub level".
 
 <Tabs>
   <TabItem value="V2" label="StatevectorSampler (V2)">
