--- a/docs/verify/simulate-with-qiskit-primitives.mdx
+++ b/docs/verify/simulate-with-qiskit-primitives.mdx
@@ -410,7 +410,7 @@ The new interface accepts a `shots` argument that can be defined at the "pub lev
 
   <TabItem value="V1" label="Sampler (V1)">
 
-      The V1 interface allowed to specify shots by:
+      The V1 interface specifies shots in the following ways:
 
         - Setting keyword arguments in the [`Sampler.run`](../api/qiskit/qiskit.primitives.Sampler#run) method.
         - Modifying the [`Sampler`](../api/qiskit/qiskit.primitives.Sampler) options.
