fix broken internal link

--- a/docs/verify/simulate-with-qiskit-primitives.mdx
+++ b/docs/verify/simulate-with-qiskit-primitives.mdx
@@ -95,7 +95,7 @@ observable.
     Run the estimation by calling the [`StatevectorEstimator.run`](../api/qiskit/qiskit.primitives.StatevectorEstimator#run)
     method, which returns an instance of ... You can get the results from the
     job (as a [`qiskit.primitives.PrimitiveResult`](../api/qiskit/qiskit.primitives.PrimitiveResult) object)
-    with the [`qiskit.primitives.PrimitiveResult.result`](../api/qiskit/qiskit.primitives.PrimitiveResult#result) method.
+    with the [`qiskit.primitives.PrimitiveResult.primitiveresult`](../api/qiskit/qiskit.primitives.PrimitiveResult#primitiveresult) method.
 
 ```python
 job = estimator.run([(qc, observable, parameter_values)])
