--- a/docs/api/migration-guides/qiskit-runtime.mdx
+++ b/docs/api/migration-guides/qiskit-runtime.mdx
@@ -24,7 +24,7 @@ The Qiskit Runtime primitives implement the reference Sampler V2 and Estimator V
 
 ## Basic steps to migrate to primitives
 
-### Step 1 - Determine which primitive to use
+### Step 1: Determine which primitive to use
 
 When migrating, the key to writing an equivalent algorithm using
 primitives is to first identify what minimal unit of information
@@ -38,14 +38,14 @@ your algorithm is based on:
 
     A probability distribution is often of interest in optimization problems that return a classical bit string, encoding a certain solution to a problem at hand. In these cases, you might be interested in finding a bit string that corresponds to a ket value with the largest probability of being measured from a quantum state, for example.
 
-### Step 2 - Change imports as necessary
+### Step 2: Change imports as necessary
 
 Follow the steps in the appropriate topic to change your import options and other setup information:
 
-- [Migrate from `qiskit-ibm-provider`.](qiskit-runtime-from-ibm-provider)
-- [Migrate from `qiskit-ibmq-provider`.](qiskit-runtime-from-ibmq-provider)
+- [Migrate from `qiskit-ibm-provider`](qiskit-runtime-from-ibm-provider)
+- [Migrate from `qiskit-ibmq-provider`](qiskit-runtime-from-ibmq-provider)
 
-### Step 3 - Replace the call to `backend.run` with a call to `qiskit_ibm_runtime`.
+### Step 3: Replace the call to `backend.run` with a call to `qiskit_ibm_runtime`.
 
 See these topics for instructions:
 
@@ -54,21 +54,21 @@ See these topics for instructions:
 -  [Common use cases (basic, parameterized, and dynamic circuits)](qiskit-runtime-use-case)
 
 
-### Step 3a - replace any `backend.run` options with `qiskit_ibm_runtime` options.  
+### Step 3a: replace any `backend.run` options with `qiskit_ibm_runtime` options.  
 
 See the following topics for instructions:
 
-- [Migrate options.](qiskit-runtime-options)
-- Common use cases [Options section.](qiskit-runtime-use-case#migrate-options)
+- [Migrate options](qiskit-runtime-options)
+- Common use cases [Options section](qiskit-runtime-use-case#migrate-options)
 
 
 ## Next steps
 
 <Admonition type="tip" title="Recommendations">
-    - [Get started with Estimator.](../../run/primitives-get-started#start-estimator)
-    - [Get started with Sampler.](../../run/primitives-get-started#start-sampler)
-    - Explore [sessions.](../../run/sessions)
-    - [Run a primitive in a session.](../../run/run-jobs-in-session)
-    - Experiment with the [Submit pre-transpiled circuits tutorial.](https://learning.quantum.ibm.com/tutorial/submitting-user-transpiled-circuits-using-primitives)
+    - [Get started with Estimator](../../run/primitives-get-started#start-estimator)
+    - [Get started with Sampler](../../run/primitives-get-started#start-sampler)
+    - Explore [sessions](../../run/sessions)
+    - [Run a primitive in a session](../../run/run-jobs-in-session)
+    - Experiment with the [Submit pre-transpiled circuits tutorial](https://learning.quantum.ibm.com/tutorial/submitting-user-transpiled-circuits-using-primitives)
 
 </Admonition>
