--- a/docs/api/migration-guides/qiskit-runtime-from-ibm-provider.mdx
+++ b/docs/api/migration-guides/qiskit-runtime-from-ibm-provider.mdx
@@ -20,6 +20,8 @@ Qiskit Runtime on IBM Cloud or IBM Quantum Platform. For more
 information on retrieving account credentials, see [Install and set up](../../start/install).
 
 ``` python
+from qiskit_ibm_runtime import QiskitRuntimeService
+
 # IBM Quantum channel; set to default 
 
 QiskitRuntimeService.save_account(channel="ibm_quantum", token="<IQP_TOKEN>", overwrite=True, default=true)
@@ -155,7 +157,7 @@ pm = generate_preset_pass_manager(backend=backend, optimization_level=1)
 isa_circuit = pm.run(circuit)
  
 sampler = Sampler(backend)
-job = sampler.run([(isa_circuit,)])
+job = sampler.run([isa_circuit])
 result = job.result()
 print(f" > Counts: {result[0].data.meas.get_counts()}")
 ```
