--- a/docs/api/migration-guides/qiskit-runtime-from-ibm-provider.mdx
+++ b/docs/api/migration-guides/qiskit-runtime-from-ibm-provider.mdx
@@ -17,7 +17,7 @@ Use the updated code to work save accounts.
   <TabItem value="updated" label="Runtime primitives">
 The new syntax accepts credentials for
 Qiskit Runtime on IBM Cloud or IBM Quantum Platform. For more
-information on retrieving account credentials, see [Install and set up](../../start/install).
+information on retrieving account credentials, see [Install and set up](../../start/setup-channel).
 
 ``` python
 # IBM Quantum channel; set to default 
@@ -107,7 +107,6 @@ Use the updated code to specify a backend.
 
 <Tabs>
   <TabItem value="updated" label="Runtime primitives">
-With Qiskit Runtime, you can also run in local testing mode as illustrated in [End-to-end examples.](qiskit-runtime-examples)
 
 ``` python
 # You can specify the instance in service.backend() instead of initializing a new service
@@ -120,6 +119,18 @@ from qiskit_ibm_runtime import QiskitRuntimeService
 
 service = QiskitRuntimeService()
 backend = service.least_busy(operational=True, simulator=False, min_num_qubits=<num_qubits>)
+```
+
+With Qiskit Runtime, you can also run in local testing mode.
+
+```python
+# Define a local backend
+from qiskit_ibm_runtime.fake_provider import FakeManilaV2
+backend = FakeManilaV2()
+
+# You could use an Aer simulator instead by using the following code:
+# from qiskit_aer import AerSimulator
+# backend = AerSimulator()
 ```
   </TabItem>
 
