--- a/docs/verify/simulate-with-qiskit-primitives.ipynb
+++ b/docs/verify/simulate-with-qiskit-primitives.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "d2df2a32-dca3-4da8-9786-488203bd063b",
    "metadata": {},
    "source": [
     "# Exact simulation with Qiskit primitives"
@@ -9,6 +10,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c623b6f4-cbb8-4ec2-9db2-8f867a117740",
    "metadata": {},
    "source": [
     "The reference primitives in Qiskit perform local statevector simulations. These simulations do not support\n",
@@ -23,6 +25,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8366190d-e993-4b26-9d68-a6c1157be489",
    "metadata": {},
    "source": [
     "There are two reference implementations of `Estimator` in `qiskit.primitives` that run on a local statevector\n",
@@ -45,6 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "f129715c-80d1-4ecb-acb2-ef6f1fd14fa6",
    "metadata": {},
    "outputs": [
     {
@@ -75,6 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "ed97b688-03b2-4b40-be95-dbd386e440b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,6 +93,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "23f43e76-7af2-430b-afa3-3fe8ba982aab",
    "metadata": {},
    "source": [
     "### Initialize an Estimator\n",
@@ -115,11 +121,12 @@
     "estimator = Estimator()\n",
     "```\n",
     "  </TabItem>\n",
-    "</Tabs>\n"
+    "</Tabs>"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "0afa247f-7b6d-4c4a-b543-934747eb0016",
    "metadata": {},
    "source": [
     "### Run and get results\n",
@@ -164,6 +171,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "06beb167-00d9-43e0-837e-09660471a9f3",
    "metadata": {},
    "source": [
     "#### Get the expected value from the result\n",
@@ -202,11 +210,12 @@
     " > Metadata: [{}, {}, {}]\n",
     "```\n",
     "  </TabItem>\n",
-    "</Tabs>\n"
+    "</Tabs>"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "e327b0ab-2bf5-40c1-ae86-70b1a3f7f2ea",
    "metadata": {},
    "source": [
     "### Set Estimator run options\n",
@@ -251,6 +260,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9ae0d76a-0e99-413f-b370-b09cf2eec844",
    "metadata": {},
    "source": [
     "## Use the reference `Sampler`\n",
@@ -275,6 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "711c6bff-3d48-4035-8b67-f789834dbbda",
    "metadata": {},
    "outputs": [
     {
@@ -301,6 +312,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "470ed0fb-3481-4203-91c6-0a192270e0e0",
    "metadata": {},
    "source": [
     "<Admonition type=\"note\">\n",
@@ -310,6 +322,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f8a14653-f2ca-4943-83a6-4a9621015d31",
    "metadata": {},
    "source": [
     "### Initialize `Sampler`\n",
@@ -340,6 +353,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2dd4fd9e-8e6a-4371-a135-bd4ff9a341b2",
    "metadata": {},
    "source": [
     "### Run and get results\n",
@@ -384,6 +398,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fc701e56-2bc9-49aa-ada6-103a23ef0fbe",
    "metadata": {},
    "source": [
     "### Get the probability distribution or measurement outcome\n",
@@ -472,6 +487,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "164ebfeb-9f7e-4cff-96e6-02b7e1eb7dbd",
    "metadata": {},
    "source": [
     "### Change run options\n",
@@ -515,6 +531,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1c1e8c2d-90df-4d24-bce7-491ad18b75b8",
    "metadata": {},
    "source": [
     "## Next steps\n",
@@ -532,7 +549,7 @@
  "metadata": {
   "description": "How to perform exact simulation of quantum circuits using primitives in Qiskit.",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -546,7 +563,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3"
   },
   "title": "Exact simulation with Qiskit primitives"
  },
