--- a/docs/verify/simulate-with-qiskit-primitives.ipynb
+++ b/docs/verify/simulate-with-qiskit-primitives.ipynb
@@ -28,6 +28,8 @@
    "id": "8366190d-e993-4b26-9d68-a6c1157be489",
    "metadata": {},
    "source": [
+    "## Use the reference `Estimator`\n",
+    "\n",
     "There are two reference implementations of `Estimator` in `qiskit.primitives` that run on a local statevector\n",
     "simulators: the [`StatevectorEstimator`](../api/qiskit/qiskit.primitives.StatevectorEstimator) class and the\n",
     "[`Estimator`](../api/qiskit/qiskit.primitives.Estimator) class. The [`StatevectorEstimator`](../api/qiskit/qiskit.primitives.StatevectorEstimator)\n",
@@ -265,7 +267,7 @@
    "source": [
     "## Use the reference `Sampler`\n",
     "\n",
-    "Similarly to the Estimator, there are two reference implementations of `Sampler` in `qiskit.primitives`:\n",
+    "Similar to the Estimator, there are two reference implementations of `Sampler` in `qiskit.primitives`:\n",
     "the [`StatevectorSampler`](../api/qiskit/qiskit.primitives.StatevectorSampler) class and the\n",
     "[`Sampler`](../api/qiskit/qiskit.primitives.Sampler) class. The [`StatevectorSampler`](../api/qiskit/qiskit.primitives.StatevectorSampler)\n",
     "implements the new Estimator V2 interface introduced in Qiskit 1.0, and offers additional input vectorization\n",
