--- a/docs/verify/simulate-with-qiskit-primitives.ipynb
+++ b/docs/verify/simulate-with-qiskit-primitives.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d2df2a32-dca3-4da8-9786-488203bd063b",
    "metadata": {},
    "source": [
     "# Exact simulation with Qiskit primitives"
@@ -10,7 +9,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c623b6f4-cbb8-4ec2-9db2-8f867a117740",
    "metadata": {},
    "source": [
     "The reference primitives in Qiskit perform local statevector simulations. These simulations do not support\n",
@@ -25,7 +23,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8366190d-e993-4b26-9d68-a6c1157be489",
    "metadata": {},
    "source": [
     "## Use the reference `Estimator`\n",
@@ -50,7 +47,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f129715c-80d1-4ecb-acb2-ef6f1fd14fa6",
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +77,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ed97b688-03b2-4b40-be95-dbd386e440b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +90,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23f43e76-7af2-430b-afa3-3fe8ba982aab",
    "metadata": {},
    "source": [
     "### Initialize an Estimator\n",
@@ -128,7 +122,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0afa247f-7b6d-4c4a-b543-934747eb0016",
    "metadata": {},
    "source": [
     "### Run and get results\n",
@@ -173,7 +166,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06beb167-00d9-43e0-837e-09660471a9f3",
    "metadata": {},
    "source": [
     "#### Get the expected value from the result\n",
@@ -217,7 +209,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e327b0ab-2bf5-40c1-ae86-70b1a3f7f2ea",
    "metadata": {},
    "source": [
     "### Set Estimator run options\n",
@@ -262,7 +253,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ae0d76a-0e99-413f-b370-b09cf2eec844",
    "metadata": {},
    "source": [
     "## Use the reference `Sampler`\n",
@@ -286,8 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "711c6bff-3d48-4035-8b67-f789834dbbda",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +286,7 @@
        "<Figure size 580.387x284.278 with 1 Axes>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +303,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "470ed0fb-3481-4203-91c6-0a192270e0e0",
    "metadata": {},
    "source": [
     "<Admonition type=\"note\">\n",
@@ -323,8 +311,50 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"word-wrap: normal;white-space: pre;background: #fff0;line-height: 1.1;font-family: &quot;Courier New&quot;,Courier,monospace\">        ┌───┐      ░ ┌─┐   \n",
+       "   q_0: ┤ H ├──■───░─┤M├───\n",
+       "        └───┘┌─┴─┐ ░ └╥┘┌─┐\n",
+       "   q_1: ─────┤ X ├─░──╫─┤M├\n",
+       "             └───┘ ░  ║ └╥┘\n",
+       "meas: 2/══════════════╩══╩═\n",
+       "                      0  1 </pre>"
+      ],
+      "text/plain": [
+       "        ┌───┐      ░ ┌─┐   \n",
+       "   q_0: ┤ H ├──■───░─┤M├───\n",
+       "        └───┘┌─┴─┐ ░ └╥┘┌─┐\n",
+       "   q_1: ─────┤ X ├─░──╫─┤M├\n",
+       "             └───┘ ░  ║ └╥┘\n",
+       "meas: 2/══════════════╩══╩═\n",
+       "                      0  1 "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# DELETE THIS CELL \n",
+    "from qiskit.primitives import StatevectorSampler\n",
+    "\n",
+    "sampler = StatevectorSampler()\n",
+    "circuit = QuantumCircuit(2)\n",
+    "circuit.h(0)\n",
+    "circuit.cx(0, 1)\n",
+    "circuit.measure_all()\n",
+    "circuit.draw()\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "f8a14653-f2ca-4943-83a6-4a9621015d31",
    "metadata": {},
    "source": [
     "### Initialize `Sampler`\n",
@@ -355,7 +385,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2dd4fd9e-8e6a-4371-a135-bd4ff9a341b2",
    "metadata": {},
    "source": [
     "### Run and get results\n",
@@ -400,7 +429,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc701e56-2bc9-49aa-ada6-103a23ef0fbe",
    "metadata": {},
    "source": [
     "### Get the probability distribution or measurement outcome\n",
@@ -429,6 +457,17 @@
     "    circuit.measure_all()\n",
     "    circuit.draw()\n",
     "    ```\n",
+    "    \n",
+    "    ```text\n",
+    "        ┌───┐      ░ ┌─┐   \n",
+    "   q_0: ┤ H ├──■───░─┤M├───\n",
+    "        └───┘┌─┴─┐ ░ └╥┘┌─┐\n",
+    "   q_1: ─────┤ X ├─░──╫─┤M├\n",
+    "             └───┘ ░  ║ └╥┘\n",
+    "meas: 2/══════════════╩══╩═\n",
+    "                      0  1 \n",
+    "    ```\n",
+    "    \n",
     "    ```python\n",
     "    # Run using V2 sampler\n",
     "    result = sampler_v2.run([circuit]).result()\n",
@@ -489,7 +528,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "164ebfeb-9f7e-4cff-96e6-02b7e1eb7dbd",
    "metadata": {},
    "source": [
     "### Change run options\n",
@@ -533,7 +571,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c1e8c2d-90df-4d24-bce7-491ad18b75b8",
    "metadata": {},
    "source": [
     "## Next steps\n",
@@ -551,7 +588,7 @@
  "metadata": {
   "description": "How to perform exact simulation of quantum circuits using primitives in Qiskit.",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -565,7 +602,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3"
+   "version": "3.12.0"
   },
   "title": "Exact simulation with Qiskit primitives"
  },
