--- a/docs/run/primitives.mdx
+++ b/docs/run/primitives.mdx
@@ -91,7 +91,7 @@ estimator.run([circuit1, circuit2, ...],[observable1, observable2, ...],
 
 * The `run()` method takes an array of PUBs. Each PUB is in the format (`<single circuit>`, `<one or more observables>`, `<optional one or more parameter values>`, `<optional precision>`), where the optional `parameter values` can be a list or a single parameter.
 * Combines elements from observables and parameter values by following NumPy broadcasting rules as described below. 
-* Each input PUB has a corresponding PubResult that contains both data and metadata.
+* Each input PUB has a corresponding PubResult that contains both data and metadata. You need the classical register name to get the results. By default, it is named `meas`. You can find the classical register name by running `<circuit_name>.cregs`. For example, `qc.cregs`.
 
 Example: 
 
@@ -204,7 +204,7 @@ sampler.run([circuit1, circuit2, ...],[observable1, observable2, ...],[param_val
 * Elements from each are aggregated. For example, each array of parameter values in the PUB is applied to the PUB's circuit.
 * Obeys program outputs. Typically this is a bit array but can also be an array of complex numbers (measurement level 1). 
 * Returns raw data type. Data from each shot is returned (analogous to `memory=True` in the `backend.run` interface), and post-processing is done by using convenience methods.
-* Output data is grouped by output registers.
+* Output data is grouped by output registers. You need the classical register name to get the results. By default, it is named `meas`. You can find the classical register name by running `<circuit_name>.cregs`. For example, `qc.cregs`.
 
 Example: 
 
