not in estimator

--- a/docs/run/primitives.mdx
+++ b/docs/run/primitives.mdx
@@ -91,7 +91,7 @@ estimator.run([circuit1, circuit2, ...],[observable1, observable2, ...],
 
 * The `run()` method takes an array of PUBs. Each PUB is in the format (`<single circuit>`, `<one or more observables>`, `<optional one or more parameter values>`, `<optional precision>`), where the optional `parameter values` can be a list or a single parameter.
 * Combines elements from observables and parameter values by following NumPy broadcasting rules as described below. 
-* Each input PUB has a corresponding PubResult that contains both data and metadata. You need the classical register name to get the results. By default, it is named `meas`. You can find the classical register name by running `<circuit_name>.cregs`. For example, `qc.cregs`.
+* Each input PUB has a corresponding PubResult that contains both data and metadata.
 
 Example: 
 
