--- a/docs/api/migration-guides/qiskit-algorithms-module.mdx
+++ b/docs/api/migration-guides/qiskit-algorithms-module.mdx
@@ -145,7 +145,7 @@ This guide describes these common configurations for algorithms that determine w
 * Running an algorithm on an Aer simulator using a custom instruction.  For example, using the [`qiskit.opflow`](../qiskit/0.46/opflow) legacy
 [`qiskit.opflow.expectations.AerPauliExpectation`](../qiskit/0.46/qiskit.opflow.expectations.AerPauliExpectation).
 
-- Aer Primitives with `shots=None`.  See [TrotterQRTE](#trotterqrte) for examples.
+- Aer Primitives with default options.  See [TrotterQRTE](#trotterqrte) for examples.
 
 ```python
 from qiskit_aer.primitives import Sampler, Estimator
