--- a/docs/api/migration-guides/qiskit-algorithms-module.mdx
+++ b/docs/api/migration-guides/qiskit-algorithms-module.mdx
@@ -706,7 +706,7 @@ time = 1
 evolution_problem = TimeEvolutionProblem(operator, 1, initial_state)
 
 # Aer simulator using custom instruction
-estimator = AerEstimator(run_options={"shots": None})
+estimator = AerEstimator()
 
 # LieTrotter with 1 rep
 trotter_qrte = TrotterQRTE(estimator=estimator)
