--- a/docs/run/primitives-examples.mdx
+++ b/docs/run/primitives-examples.mdx
@@ -42,7 +42,7 @@ from qiskit.quantum_info import SparsePauliOp, random_hermitian
 from qiskit_ibm_runtime import EstimatorV2 as Estimator
 from qiskit_ibm_runtime.fake_provider import FakeSherbrooke
 
-# Run the sampler job locally using FakeSherbrooke
+# Run the job locally using FakeSherbrooke
 backend = FakeSherbrooke()
 
 # Uncomment the following lines to run on a real system:
@@ -51,6 +51,7 @@ backend = FakeSherbrooke()
 # backend = service.least_busy(operational=True, simulator=False, min_num_qubits=127)
 estimator = Estimator(backend)
 
+# Use fewer qubits when testing locally
 # n_qubits = 127
 n_qubits = 12
  
@@ -122,7 +123,7 @@ from qiskit.quantum_info import SparsePauliOp, random_hermitian
 from qiskit_ibm_runtime import EstimatorV2 as Estimator
 from qiskit_ibm_runtime.fake_provider import FakeSherbrooke
 
-# Run the sampler job locally using FakeSherbrooke
+# Run the job locally using FakeSherbrooke
 backend = FakeSherbrooke()
 
 # Uncomment the following lines to run on a real system:
@@ -246,7 +247,7 @@ ops = [ZZ, ZX, XZ, XX]
 
 from qiskit_ibm_runtime.fake_provider import FakeSherbrooke
 
-# Run the sampler job locally using FakeSherbrooke
+# Run the job locally using FakeSherbrooke
 backend = FakeSherbrooke()
 
 # Uncomment the following lines to run on a real system:
@@ -375,7 +376,7 @@ from qiskit.quantum_info import SparsePauliOp, random_hermitian
 from qiskit_ibm_runtime import Session, EstimatorV2 as Estimator
 from qiskit_ibm_runtime.fake_provider import FakeSherbrooke
 
-# Run the sampler job locally using FakeSherbrooke
+# Run the job locally using FakeSherbrooke
 backend = FakeSherbrooke()
 
 # Uncomment the following lines to run on a real system:
@@ -499,7 +500,7 @@ from qiskit.quantum_info import random_hermitian
 from qiskit_ibm_runtime import SamplerV2 as Sampler
 from qiskit_ibm_runtime.fake_provider import FakeSherbrooke
 
-# Run the sampler job locally using FakeSherbrooke
+# Run the job locally using FakeSherbrooke
 backend = FakeSherbrooke()
 
 # Use the commented code to run on a real system:
@@ -579,7 +580,7 @@ from qiskit.quantum_info import random_hermitian
 from qiskit_ibm_runtime import SamplerV2 as Sampler
 from qiskit_ibm_runtime.fake_provider import FakeSherbrooke
 
-# Run the sampler job locally using FakeSherbrooke
+# Run the job locally using FakeSherbrooke
 backend = FakeSherbrooke()
 
 # Use the commented code to run on a real system:
@@ -684,7 +685,7 @@ parameter_values = [
 from qiskit_ibm_runtime import SamplerV2 as Sampler
 from qiskit_ibm_runtime.fake_provider import FakeSherbrooke
 
-# Run the sampler job locally using FakeSherbrooke
+# Run the job locally using FakeSherbrooke
 backend = FakeSherbrooke()
 
 # Use the commented code to run on a real system:
@@ -765,7 +766,7 @@ from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager
 from qiskit_ibm_runtime import Session, SamplerV2 as Sampler
 from qiskit_ibm_runtime.fake_provider import FakeSherbrooke
 
-# Run the sampler job locally using FakeSherbrooke
+# Run the job locally using FakeSherbrooke
 backend = FakeSherbrooke()
 
 # Use the commented code to run on a real system:
