--- a/docs/run/primitives.mdx
+++ b/docs/run/primitives.mdx
@@ -205,6 +205,7 @@ sampler.run([circuit1, circuit2, ...],[observable1, observable2, ...],[param_val
 * Obeys program outputs. Typically this is a bit array but can also be an array of complex numbers (measurement level 1). 
 * Returns raw data type. Data from each shot is returned (analogous to `memory=True` in the `backend.run` interface), and post-processing is done by using convenience methods.
 * Output data is grouped by output registers. You need the classical register name to get the results. By default, it is named `meas`. You can find the classical register name by running `<circuit_name>.cregs`. For example, `qc.cregs`.
+* Supports circuits with classical feedforward and control flow.
 
 Example: 
 
