--- a/docs/api/migration-guides/qiskit-runtime-examples.mdx
+++ b/docs/api/migration-guides/qiskit-runtime-examples.mdx
@@ -17,7 +17,8 @@ Use the Estimator primitive to design an algorithm that calculates expectation v
 
 
 <Tabs>
-  <TabItem value="provider" label="qiskit-ibmq-provider">
+  <TabItem value="provider" label="qiskit-ibm-provider">
+
 ``` python
 from qiskit_ibm_provider import IBMProvider
 
@@ -45,7 +46,8 @@ result = backend.run(isa_circuits)
   </TabItem>
 </Tabs>
 
-**Primitives model:** Access real systems and remote simulators through the `qiskit-ibm-runtime` **primitives** (`Sampler` and `Estimator`). Use **Local testing mode** to run local simulations on Qiskit Runtime fake backends or Aer simulators. The following examples assume you have defined circuits `isa_circuits` and observables `isa_observables`.
+**Primitives model:** Access real systems through the `qiskit-ibm-runtime` **primitives** (`Sampler` and `Estimator`). Use **Local testing mode** to run local simulations on Qiskit Runtime fake backends or Aer simulators. The following examples assume you have defined circuits `isa_circuits` and observables `isa_observables`.
+
 
 <Tabs>
   <TabItem value="hw" label="Run on quantum systems">
@@ -140,7 +142,8 @@ from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager
 pm = generate_preset_pass_manager(backend=backend, optimization_level=1)
 isa_circuit = pm.run(circuit)
 
-isa_observable = op.apply_layout(isa_state.layout)
+isa_observable = op.apply_layout(isa_circuit.layout)
+
 
 
 ```
@@ -209,7 +212,8 @@ convenient tool for algorithm design.
 from qiskit_ibm_runtime import EstimatorV2 as Estimator
 
 estimator = Estimator(backend, options={"default_shots": int(1e4)})
-job = estimator.run([(isa_state, isa_observable)])
+job = estimator.run([(isa_circuit, isa_observable)])
+
 
 
 # Get results for the first (and only) PUB
@@ -271,13 +275,15 @@ difference is the format of the output: `backend.run()` outputs
 
 
 <Tabs>
-  <TabItem value="provider" label="qiskit-ibmq-provider">
+  <TabItem value="provider" label="qiskit-ibm-provider">
+
     ``` python
     from qiskit_ibm_provider import IBMProvider
 
 
     # Select provider
-    provider = IBMQ.load_account()
+    provider = IBMProvider()
+
 
     # Get backend
     backend = provider.get_backend("ibmq_qasm_simulator") # Use the cloud simulator
@@ -402,9 +408,9 @@ circuit.cx(0,1)
 circuit.measure_all() # measurement!
 
 # Define provider and simulator backend
-from qiskit import IBMQ
+from qiskit_ibm_provider import IBMProvider
 
-provider = IBMQ.get_provider(hub="ibm-q", group="open", project="main")
+provider = IBMProvider(instance="ibm-q/open/main")
 backend = provider.get_backend("ibmq_qasm_simulator")
 
 # Define a statevector simulator
