--- a/docs/api/qiskit/0.41/qiskit.algorithms.eigensolvers.VQD.mdx
+++ b/docs/api/qiskit/0.41/qiskit.algorithms.eigensolvers.VQD.mdx
@@ -85,9 +85,9 @@ python_api_name: qiskit.algorithms.eigensolvers.VQD
     list\[float]
   </Attribute>
 
-  ### initial point
+  ### initial\_point
 
-  <Attribute name="initial point">
+  <Attribute id="qiskit.algorithms.eigensolvers.VQD.initial_point" name="initial_point">
     An optional initial point (i.e. initial parameter values) for the optimizer. If `None` then VQD will look to the ansatz for a preferred point and if not will simply compute a random one.
 
     **Type**
