--- a/docs/run/configure-error-mitigation.mdx
+++ b/docs/run/configure-error-mitigation.mdx
@@ -382,8 +382,9 @@ sampler = Sampler(backend, options=options)
 
 With the V2 primitives, you can turn on and off individual error mitigation and suppression methods, including dynamical decoupling, gate and measurement twirling, measurement error mitigation, and ZNE.
 
-<Admonition>
-Not all options are available for both primitives.   See the [API reference](/api/qiskit-ibm-runtime/options) for the list of available options.
+<Admonition type = "note" title = "Notes">
+- Not all options are available for both primitives.   See the [API reference](/api/qiskit-ibm-runtime/options) for the list of available options.
+- Dynamical decoupling is not supported when the input circuits are dynamic.
 </Admonition>
 
 <Tabs>
