should be sampler in a sampler example

--- a/docs/verify/simulate-with-qiskit-primitives.mdx
+++ b/docs/verify/simulate-with-qiskit-primitives.mdx
@@ -414,7 +414,7 @@ The new interface accepts a `shots` argument that can be defined at the "PUB lev
         - Modifying the [`Sampler`](../api/qiskit/qiskit.primitives.Sampler) options.
 
     ```python
-    job = estimator.run(qc, observable, shots=2048, seed=123)
+    job = sampler.run(qc, observable, shots=2048, seed=123)
     result = job.result()
     print(result)
     ```
