API generation script: fix attributes headings (#1153)
Closes #1120 

This PR changes the script to use the `name` extracted from the
`signature` of the attributes instead of using the `id` to create the
`<h3>`s. This behavior was changed in #1026, but It broke a couple of
headings.

It also fixes two attributes of `qiskit.algorithms.eigensolvers.VQD`
manually modifying the artifacts stored in
[Box](https://ibm.ent.box.com/folder/246867452622?s=tqmvw6ldivzkhh934nhufan4rg3dregr)
for versions 0.39, 0.40, 0.41, 0.42, 0.43, 0.44, 0.45 and 0.46. See more
at #1120

--- a/docs/api/qiskit/dev/qpy.mdx
+++ b/docs/api/qiskit/dev/qpy.mdx
@@ -172,7 +172,7 @@ These functions will raise a custom subclass of [`QiskitError`](exceptions#qiski
   Set the error message.
 </Class>
 
-### QPY\_VERSION
+### qiskit.qpy.QPY\_VERSION
 
 <Attribute id="qiskit.qpy.QPY_VERSION" name="qiskit.qpy.QPY_VERSION">
   The current QPY format version as of this release. This is the default value of the `version` keyword argument on [`qpy.dump()`](#qiskit.qpy.dump "qiskit.qpy.dump") and also the upper bound for accepted values for the same argument. This is also the upper bond on the versions supported by [`qpy.load()`](#qiskit.qpy.load "qiskit.qpy.load").
@@ -182,7 +182,7 @@ These functions will raise a custom subclass of [`QiskitError`](exceptions#qiski
   [int](https://docs.python.org/3/library/functions.html#int "(in Python v3.12)")
 </Attribute>
 
-### QPY\_COMPATIBILITY\_VERSION
+### qiskit.qpy.QPY\_COMPATIBILITY\_VERSION
 
 <Attribute id="qiskit.qpy.QPY_COMPATIBILITY_VERSION" name="qiskit.qpy.QPY_COMPATIBILITY_VERSION">
   The current minimum compatibility QPY format version. This is the minimum version that [`qpy.dump()`](#qiskit.qpy.dump "qiskit.qpy.dump") will accept for the `version` keyword argument. [`qpy.load()`](#qiskit.qpy.load "qiskit.qpy.load") will be able to load all released format versions of QPY (up until `QPY_VERSION`).
