--- a/docs/api/qiskit/0.45/qiskit.algorithms.eigensolvers.VQD.mdx
+++ b/docs/api/qiskit/0.45/qiskit.algorithms.eigensolvers.VQD.mdx
@@ -58,17 +58,11 @@ python_api_name: qiskit.algorithms.eigensolvers.VQD
   ### optimizer
 
   <Attribute id="qiskit.algorithms.eigensolvers.VQD.optimizer" name="optimizer">
-    A classical optimizer or a list of optimizers,
+    A classical optimizer or a list of optimizers, one for every k-th eigenvalue. Can either be a Qiskit optimizer or a callable that takes an array as input and returns a Qiskit or SciPy optimization result.
 
     **Type**
 
     [Optimizer](qiskit.algorithms.optimizers.Optimizer "qiskit.algorithms.optimizers.Optimizer") | Sequence\[[Optimizer](qiskit.algorithms.optimizers.Optimizer "qiskit.algorithms.optimizers.Optimizer")]
-  </Attribute>
-
-  ###
-
-  <Attribute name="one for every k-th eigenvalue. Can either be a Qiskit optimizer or a callable">
-    that takes an array as input and returns a Qiskit or SciPy optimization result.
   </Attribute>
 
   ### k
@@ -89,16 +83,6 @@ python_api_name: qiskit.algorithms.eigensolvers.VQD
     **Type**
 
     [list](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.12)")\[[float](https://docs.python.org/3/library/functions.html#float "(in Python v3.12)")]
-  </Attribute>
-
-  ###
-
-  <Attribute name="initial point">
-    An optional initial point (i.e. initial parameter values) or a list of initial points (one for every k-th eigenvalue) for the optimizer. If `None` then VQD will look to the ansatz for a preferred point and if not will simply compute a random one.
-
-    **Type**
-
-    Sequence\[[float](https://docs.python.org/3/library/functions.html#float "(in Python v3.12)")] | Sequence\[Sequence\[[float](https://docs.python.org/3/library/functions.html#float "(in Python v3.12)")]] | None
   </Attribute>
 
   ### callback
